--- a/store.html
+++ b/store.html
@@ -52,7 +52,7 @@
 
 
 
-                <a class="item" href="1v1lol.html" style="background-image: url(https://cdn.discordapp.com/attachments/1194099829958267033/1194099981456523364/image.png?ex=65cacec4&is=65b859c4&hm=78a1dc3d953d8e5ad02c30502c1559eb3c0c041ec301aff5899fd1890eb142c6&); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
+                <a class="item" href="1v1lol.html" style="background-image: url(https://th.bing.com/th/id/OIP.ieJF2l4ZJ0F-oagtSqtJowAAAA?rs=1&pid=ImgDetMain); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
                     <div class="about">
                         <span class="description">1v1.lol Cheat</span>
                     </div>
