--- a/store.html
+++ b/store.html
@@ -58,7 +58,7 @@
                     </div>
                 </a>
 
-                <a class="item" href="spoofer.html" style="background-image: url(https://cdn.discordapp.com/attachments/1193930328230871131/1203005255454036018/image.png?ex=65cf84f3&is=65bd0ff3&hm=ed59c0ddf7322044523133d8e37733213f2cdae8b2758b3628f07fa70cfdbab3&); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
+                <a class="item" href="spoofer.html" style="background-image: url(https://i.ytimg.com/vi/zNieoVFSEn8/maxresdefault.jpg); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
                     <div class="about">
                         <span class="description">Verse Crack</span>
                     </div>
