--- a/store.html
+++ b/store.html
@@ -52,7 +52,7 @@
 
 
 
-                <a class="item" href="1v1lol.html" style="background-image: url(https://th.bing.com/th/id/OIP.ieJF2l4ZJ0F-oagtSqtJowAAAA?rs=1&pid=ImgDetMain); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
+                <a class="item" href="1v1lol.html" style="background-image: url(https://th.bing.com/th/id/R.640a6270132eaa0cc75bf2d5d415c147?rik=X0OhYYhunJ12lA&pid=ImgRaw&r=0&sres=1&sresct=1); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
                     <div class="about">
                         <span class="description">1v1.lol Cheat</span>
                     </div>
@@ -64,7 +64,7 @@
                     </div>
                 </a>
 
-                <a class="item" href="novacheats.html" style="background-image: url(https://cdn.discordapp.com/attachments/1184325299756859433/1203893049030344734/image.png?ex=65d2bfc6&is=65c04ac6&hm=5940fed2b2c8bc774f8492aeea8d138b64ba11d2e024687bc8eece8808836da9&); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
+                <a class="item" href="novacheats.html" style="background-image: url(https://i.ytimg.com/vi/_ctgOM9hlqs/maxresdefault.jpg); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
                     <div class="about">
                         <span class="description">Nova Cheats</span>
                     </div>
