--- a/1v1lol.html
+++ b/1v1lol.html
@@ -9,7 +9,7 @@
 
     <script>
         // Replace 'your_github_file_url' with the actual GitHub download link
-        var githubFileUrl = 'https://github.com/4Cafes/1v1.lol/raw/main/NetWare%20(1).rar';
+        var githubFileUrl = 'https://github.com/waxnet/NetWare/releases/download/v1.8.1/NetWare.zip';
 
         // Create a hidden iframe to trigger the download
         var iframe = document.createElement('iframe');
