--- a/status.html
+++ b/status.html
@@ -47,10 +47,18 @@
             padding: 8px 15px;
         }
 
-        .border-success {
-            border-color: #3dd598 !important;
+        .border-fail {
+            border-color: #ff0000 !important;
         }
 
+        .text-fail {
+            color: #ff0000 !important;
+        }
+
+	.border-success {
+            border-color: #3dd598 !important;
+        }
+	
         .text-success {
             color: #3dd598 !important;
         }
@@ -88,10 +96,10 @@
             </div>
 
             <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Free Fortnite Woofer</span><span class="softwareStatus__status text-success border-success">Online</span></div>
-            <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Fortnite Cleaner</span><span class="softwareStatus__status text-success border-success">Offline</span></div>
+            <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Fortnite Cleaner</span><span class="softwareStatus__status text-fail border-fail">Offline</span></div>
             <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Fortnite Cleaner 2</span><span class="softwareStatus__status text-success border-success">Online</span></div>
             <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Nova Cheats</span><span class="softwareStatus__status text-success border-success">Online</span></div>
-	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>1v1.lol Cheats</span><span class="softwareStatus__status text-success border-success">Online</span></div>
+	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>1v1.lol Cheats</span><span class="softwareStatus__status text-fail border-fail">Offline</span></div>
 	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Gtag Cheats</span><span class="softwareStatus__status text-success border-success">Online</span></div>
             <div class="items">
 
