--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <a href="index.html" class="nav-link wide">Home</a>
             <a href="store.html" target="_blank">Store</a>
             <a href="https://discord.gg/HeC8e4eKHg" target="_blank">Discord</a>
+	    <a href="https://cafes.lol/status" target="_blank">Status</a>
 			
         </nav>
     </div>
