--- a/store.html
+++ b/store.html
@@ -29,8 +29,8 @@
                 <nav class="nav">
                     <a href="index.html">Home</a>
                     <a href="store.html" class="nav-link wide">Store</a>
- 
                     <a href="https://discord.gg/HeC8e4eKHg" target="_blank">Discord</a>
+                    <a href="https://cafes.lol/status" target="_blank">Status</a>
                 </nav>
             </div>
 
