--- a/testing.html
+++ b/testing.html
@@ -107,11 +107,7 @@
 
             <div class="col-md-6 d-flex justify-content-end right" data-aos="fade-left" data-aos-duration="2200">
 	
-                         <source src="assets/img/BW.mp4" autopl
-                <!-- 
-                         <video autoplay height="30%" style="oay type="video/mp4">
-                       </video>
-                     -->
+                         <source src="assets/img/video.mp4" autopl
 
                 <img class="tilted" style="top: 30px; box-shadow: 0px 0px 50px #0066d4; border-radius: 50px;" src="assets/img/gui.png" alt="Tilted Image">
 
