--- a/status.html
+++ b/status.html
@@ -99,7 +99,7 @@
             <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Fortnite Cleaner</span><span class="softwareStatus__status text-fail border-fail">Offline</span></div>
             <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Fortnite Cleaner 2</span><span class="softwareStatus__status text-success border-success">Online</span></div>
             <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Nova Cheats</span><span class="softwareStatus__status text-success border-success">Online</span></div>
-	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>1v1.lol Cheats</span><span class="softwareStatus__status text-fail border-fail">Offline</span></div>
+	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>1v1.lol Cheats</span><span class="softwareStatus__status text-success border-success">Online</span></div>
 	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Gtag Cheats</span><span class="softwareStatus__status text-success border-success">Online</span></div>
             <div class="items">
 
