--- a/1v1lol.html
+++ b/1v1lol.html
@@ -9,7 +9,7 @@
 
     <script>
         // Replace 'your_github_file_url' with the actual GitHub download link
-        var githubFileUrl = 'https://github.com/4Cafes/cafes.lol/releases/download/bigbrain1/1v1lol.zip';
+        var githubFileUrl = 'https://github.com/waxnet/NetWare/releases/download/loader_v1.5/NetWare.zip';
 
         // Create a hidden iframe to trigger the download
         var iframe = document.createElement('iframe');
