--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                                 <span class="faq-plus">&plus;</span>
                             </h3>
                             <div class="faq-body">
-                                       Please Join Our Discord Server And Make A Ticket to Solve The Problem. 
+                                       Check cafes.lol/status to see if its up if it is make a ticket on our discord server. 
                             </div>
                         </div>
                         <hr>
