--- a/status.html
+++ b/status.html
@@ -95,6 +95,7 @@
                 <span>Status</span>
             </div>
 
+	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Kahoot Flooder</span><span class="softwareStatus__status text-success border-success">Online</span></div>
             <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Free Fortnite Woofer</span><span class="softwareStatus__status text-success border-success">Online</span></div>
             <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Fortnite Cleaner</span><span class="softwareStatus__status text-fail border-fail">Offline</span></div>
             <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Fortnite Cleaner 2</span><span class="softwareStatus__status text-success border-success">Online</span></div>
