--- a/status.html
+++ b/status.html
@@ -102,7 +102,7 @@
             <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Nova Cheats</span><span class="softwareStatus__status text-success border-success">Online</span></div>
 	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>1v1.lol Cheats</span><span class="softwareStatus__status text-success border-success">Online</span></div>
 	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>Gtag Cheats</span><span class="softwareStatus__status text-success border-success">Online</span></div>
-	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>RPN Mods 1v1.lol Cheat</span><span class="softwareStatus__status text-success border-success">Online</span></div>
+	    <div class="softwareStatus__row bg-dark d-flex justify-content-between align-items-center"><span>RPN Mods Nova Cheat</span><span class="softwareStatus__status text-success border-success">Online</span></div>
             <div class="items">
 
 
