--- a/store.html
+++ b/store.html
@@ -70,7 +70,7 @@
                     </div>
                 </a>
 
-                <a class="item" href="rpnnovacheats.html" style="background-image: url(https://raw.githubusercontent.com/RPNPanda/RPNPanda/main/New%20Project%20(14).png); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
+                <a class="item" href="rpnnovacheats.html" style="background-image: url(https://avatars.githubusercontent.com/u/120151531?v=4); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
                     <div class="about">
                         <span class="description">RPN Nova Cheats</span>
                     </div>
