--- a/store.html
+++ b/store.html
@@ -52,7 +52,7 @@
 
 
 
-                <a class="item" href="1v1lol.html" style="background-image: url(https://th.bing.com/th/id/R.640a6270132eaa0cc75bf2d5d415c147?rik=X0OhYYhunJ12lA&pid=ImgRaw&r=0&sres=1&sresct=1); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
+                <a class="item" href="1v1lol.html" style="background-image: url(https://cdn.akamai.steamstatic.com/steam/apps/2305790/capsule_616x353.jpg?t=1694685389); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
                     <div class="about">
                         <span class="description">1v1.lol Cheat</span>
                     </div>
@@ -64,7 +64,7 @@
                     </div>
                 </a>
 
-                <a class="item" href="novacheats.html" style="background-image: url(https://i.ytimg.com/vi/_ctgOM9hlqs/maxresdefault.jpg); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
+                <a class="item" href="novacheats.html" style="background-image: url(https://pbs.twimg.com/profile_images/1669955997027254274/NMHKH9YT_400x400.png); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
                     <div class="about">
                         <span class="description">Nova Cheats</span>
                     </div>
