--- a/store.html
+++ b/store.html
@@ -58,7 +58,7 @@
                     </div>
                 </a>
 
-                <a class="item" href="spoofer.html" style="background-image: url(https://i.ytimg.com/vi/zNieoVFSEn8/maxresdefault.jpg); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
+                <a class="item" href="spoofer.html" style="background-image: url(https://img.youtube.com/vi/edHe6GaMLAE/maxresdefault.jpg); background-size: cover; background-position: 50% center; text-decoration: none; border: none; outline: none; cursor: pointer;">
                     <div class="about">
                         <span class="description">Verse Crack</span>
                     </div>
