--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                         <h1 class="mb-3">Welcome to Cafes.lol<span class="red">!</span></h1>
                         <div class="paragraph">
                             <p class="mb-5"></p>
-                            <p class="mb-5"> - Created by "4Cafes" !</p>				
-                            <p class="mb-5"> - Please only use Discord invites from our Website !</p>					
+                            <p class="mb-5"> - Focused on free cheats.</p>				
+                            <p class="mb-5"> - Drake is not that big.</p>					
 							
                         </div>
                     </div>
