--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
                         <h1 class="mb-3">Welcome to Cafes.lol<span class="red">!</span></h1>
                         <div class="paragraph">
                             <p class="mb-5"></p>
-                            <p class="mb-5"> - Focused on free cheats.</p>				
-                            <p class="mb-5"> - Drake is not that big.</p>					
+                            <p class="mb-5"> - The Government is ruining america.</p>				
+                            <p class="mb-5"> - Freedom of speech online is key.</p>
+			    <p class="mb-5"> - #freepalastine #freetheinternet</p>
 							
                         </div>
                     </div>
