--- a/index.html
+++ b/index.html
@@ -526,6 +526,7 @@
             <div class="col-lg-4 col-md-6 col-xs-12 col-sm-10">
                 <div class="services-item1 text-center">
                     <h4>Runs</h4>
+		    <p>Lifetime
                     </p>
                     <h4>100+</h4>
                 </div>
